--- a/TEORIAS/desafioEstrangeiro.html
+++ b/TEORIAS/desafioEstrangeiro.html
@@ -44,7 +44,7 @@
     <label for="paisx">Digite seu país </label>
     <input id="paisx" type="text" class="pais">
     
-    <input type="button" class="enviar" onclick=validador() value="enviar">
+    <input type="button" class="enviar" onclick='validador()' value="enviar">
     </div>
     <div class="resultado">Você é: </div>
     
